--- a/src/main/gui/turni.ui
+++ b/src/main/gui/turni.ui
@@ -48,19 +48,6 @@ font:  bold 11px
      <string>VISUALIZZA</string>
     </property>
    </widget>
-   <widget class="QLabel" name="search_button">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
-      <y>70</y>
-      <width>41</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/images/images/loupe (1) (1).png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="modifica_button">
     <property name="geometry">
      <rect>
@@ -99,6 +86,9 @@ font:  bold 11px
       <width>751</width>
       <height>421</height>
      </rect>
+    </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
     </property>
     <attribute name="horizontalHeaderDefaultSectionSize">
      <number>150</number>
@@ -222,10 +212,10 @@ font:  bold 11px
    <widget class="QPushButton" name="indietro_button">
     <property name="geometry">
      <rect>
-      <x>680</x>
+      <x>654</x>
       <y>20</y>
-      <width>75</width>
-      <height>23</height>
+      <width>101</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -257,6 +247,9 @@ font:  bold 11px
       <width>101</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="warning_label">
@@ -374,6 +367,36 @@ font:  bold 11px
     </property>
     <property name="text">
      <string>Filtro Data:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="search_button">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>70</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+background-color:rgb(24, 105, 68);
+color: white;
+border-style: outset;
+font:  bold 11px
+
+
+}
+
+QPushButton:hover{
+background-color:rgb(170, 203, 108);
+color: white;
+border-style: outset;
+font:  bold 11px
+}</string>
+    </property>
+    <property name="text">
+     <string>FILTRA</string>
     </property>
    </widget>
   </widget>
