--- a/src/main/gui/mezzi.ui
+++ b/src/main/gui/mezzi.ui
@@ -100,6 +100,9 @@ font:  bold 11px
       <height>421</height>
      </rect>
     </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
+    </property>
     <attribute name="horizontalHeaderDefaultSectionSize">
      <number>150</number>
     </attribute>
