--- a/src/main/gui/inserimento_servizio.ui
+++ b/src/main/gui/inserimento_servizio.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>455</width>
-    <height>247</height>
+    <width>433</width>
+    <height>293</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,8 +21,8 @@
    <widget class="QPushButton" name="annulla_button">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>190</y>
+      <x>250</x>
+      <y>240</y>
       <width>160</width>
       <height>23</height>
      </rect>
@@ -52,7 +52,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>150</y>
+      <y>200</y>
       <width>80</width>
       <height>13</height>
      </rect>
@@ -65,7 +65,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>190</y>
+      <y>240</y>
       <width>161</width>
       <height>23</height>
      </rect>
@@ -95,7 +95,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>25</y>
+      <y>35</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -108,7 +108,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>65</y>
+      <y>96</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -121,8 +121,8 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>20</y>
-      <width>220</width>
+      <y>30</y>
+      <width>291</width>
       <height>20</height>
      </rect>
     </property>
@@ -131,8 +131,8 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>60</y>
-      <width>220</width>
+      <y>91</y>
+      <width>151</width>
       <height>22</height>
      </rect>
     </property>
@@ -141,7 +141,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>177</x>
-      <y>150</y>
+      <y>200</y>
       <width>16</width>
       <height>17</height>
      </rect>
@@ -154,7 +154,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>197</x>
-      <y>150</y>
+      <y>200</y>
       <width>16</width>
       <height>17</height>
      </rect>
@@ -167,7 +167,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>217</x>
-      <y>150</y>
+      <y>200</y>
       <width>16</width>
       <height>17</height>
      </rect>
@@ -180,7 +180,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>257</x>
-      <y>150</y>
+      <y>200</y>
       <width>16</width>
       <height>17</height>
      </rect>
@@ -193,7 +193,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>237</x>
-      <y>150</y>
+      <y>200</y>
       <width>16</width>
       <height>17</height>
      </rect>
@@ -206,7 +206,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>277</x>
-      <y>150</y>
+      <y>200</y>
       <width>16</width>
       <height>17</height>
      </rect>
@@ -219,7 +219,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>297</x>
-      <y>150</y>
+      <y>200</y>
       <width>16</width>
       <height>17</height>
      </rect>
@@ -232,7 +232,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>130</y>
+      <y>180</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -245,7 +245,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>130</y>
+      <y>180</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -258,7 +258,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>130</y>
+      <y>180</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -271,7 +271,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>130</y>
+      <y>180</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -284,7 +284,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>130</y>
+      <y>180</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -297,7 +297,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>130</y>
+      <y>180</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -310,7 +310,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>130</y>
+      <y>180</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -323,7 +323,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>105</y>
+      <y>155</y>
       <width>47</width>
       <height>13</height>
      </rect>
@@ -336,18 +336,18 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>100</y>
-      <width>220</width>
+      <y>150</y>
+      <width>291</width>
       <height>20</height>
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="nuovocliente_button">
+   <widget class="QPushButton" name="clienti_button">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>60</y>
-      <width>75</width>
+      <x>299</x>
+      <y>90</y>
+      <width>131</width>
       <height>23</height>
      </rect>
     </property>
@@ -356,7 +356,7 @@ font:  bold 11px
 background-color:rgb(24, 105, 68);
 color: white;
 border-style: outset;
-font:  bold 8px
+font:  bold 11px
 
 
 }
@@ -365,11 +365,50 @@ QPushButton:hover{
 background-color:rgb(170, 203, 108);
 color: white;
 border-style: outset;
-font:  bold 8px
+font:  bold 11px
 }</string>
     </property>
     <property name="text">
-     <string>NUOVO CLIENTE</string>
+     <string>LISTA CLIENTI</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="tipo_error">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>10</y>
+      <width>550</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="luogo_error">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>130</y>
+      <width>550</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="cliente_error">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>70</y>
+      <width>550</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
