--- a/src/main/gui/inserimento_servizio.ui
+++ b/src/main/gui/inserimento_servizio.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>433</width>
-    <height>293</height>
+    <width>411</width>
+    <height>472</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,8 +21,8 @@
    <widget class="QPushButton" name="annulla_button">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>240</y>
+      <x>240</x>
+      <y>390</y>
       <width>160</width>
       <height>23</height>
      </rect>
@@ -52,7 +52,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>200</y>
+      <y>340</y>
       <width>80</width>
       <height>13</height>
      </rect>
@@ -64,8 +64,8 @@ font:  bold 11px
    <widget class="QPushButton" name="inserisci_button">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>240</y>
+      <x>10</x>
+      <y>390</y>
       <width>161</width>
       <height>23</height>
      </rect>
@@ -120,7 +120,7 @@ font:  bold 11px
    <widget class="QLineEdit" name="tipo_field">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>100</x>
       <y>30</y>
       <width>291</width>
       <height>20</height>
@@ -130,193 +130,11 @@ font:  bold 11px
    <widget class="QComboBox" name="cliente_combo">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>100</x>
       <y>91</y>
       <width>151</width>
       <height>22</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="lun_check">
-    <property name="geometry">
-     <rect>
-      <x>177</x>
-      <y>200</y>
-      <width>16</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="mar_check">
-    <property name="geometry">
-     <rect>
-      <x>197</x>
-      <y>200</y>
-      <width>16</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="mer_check">
-    <property name="geometry">
-     <rect>
-      <x>217</x>
-      <y>200</y>
-      <width>16</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="ven_check">
-    <property name="geometry">
-     <rect>
-      <x>257</x>
-      <y>200</y>
-      <width>16</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="gio_check">
-    <property name="geometry">
-     <rect>
-      <x>237</x>
-      <y>200</y>
-      <width>16</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="sab_check">
-    <property name="geometry">
-     <rect>
-      <x>277</x>
-      <y>200</y>
-      <width>16</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="dom_check">
-    <property name="geometry">
-     <rect>
-      <x>297</x>
-      <y>200</y>
-      <width>16</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>180</y>
-      <width>16</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>L</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
-      <y>180</y>
-      <width>16</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>M</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>180</y>
-      <width>16</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>G</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_4">
-    <property name="geometry">
-     <rect>
-      <x>220</x>
-      <y>180</y>
-      <width>16</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>M</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_5">
-    <property name="geometry">
-     <rect>
-      <x>280</x>
-      <y>180</y>
-      <width>16</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>S</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>180</y>
-      <width>16</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>V</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>180</y>
-      <width>16</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>D</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_11">
@@ -335,7 +153,7 @@ font:  bold 11px
    <widget class="QLineEdit" name="luogo_field">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>100</x>
       <y>150</y>
       <width>291</width>
       <height>20</height>
@@ -345,7 +163,7 @@ font:  bold 11px
    <widget class="QPushButton" name="clienti_button">
     <property name="geometry">
      <rect>
-      <x>299</x>
+      <x>259</x>
       <y>90</y>
       <width>131</width>
       <height>23</height>
@@ -375,7 +193,7 @@ font:  bold 11px
    <widget class="QLabel" name="tipo_error">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>100</x>
       <y>10</y>
       <width>550</width>
       <height>17</height>
@@ -388,7 +206,7 @@ font:  bold 11px
    <widget class="QLabel" name="luogo_error">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>100</x>
       <y>130</y>
       <width>550</width>
       <height>17</height>
@@ -401,7 +219,7 @@ font:  bold 11px
    <widget class="QLabel" name="cliente_error">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>100</x>
       <y>70</y>
       <width>550</width>
       <height>17</height>
@@ -409,6 +227,101 @@ font:  bold 11px
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>220</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Dal:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_13">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>273</y>
+      <width>47</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Al:</string>
+    </property>
+   </widget>
+   <widget class="QDateEdit" name="dateEdit">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>210</y>
+      <width>291</width>
+      <height>26</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QDateEdit" name="dateEdit_2">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>270</y>
+      <width>291</width>
+      <height>26</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="periodicita_error">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>310</y>
+      <width>550</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="ripetizioni_box">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>333</y>
+      <width>42</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>330</y>
+      <width>161</width>
+      <height>25</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>340</y>
+      <width>51</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
     </property>
    </widget>
   </widget>
