--- a/src/main/gui/inserimento_servizio.ui
+++ b/src/main/gui/inserimento_servizio.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>411</width>
-    <height>472</height>
+    <height>440</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -52,9 +52,9 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>340</y>
+      <y>333</y>
       <width>80</width>
-      <height>13</height>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -64,7 +64,7 @@ font:  bold 11px
    <widget class="QPushButton" name="inserisci_button">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>70</x>
       <y>390</y>
       <width>161</width>
       <height>23</height>
@@ -95,9 +95,9 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>35</y>
-      <width>47</width>
-      <height>13</height>
+      <y>28</y>
+      <width>71</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -141,9 +141,9 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>155</y>
-      <width>47</width>
-      <height>13</height>
+      <y>150</y>
+      <width>51</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -255,7 +255,7 @@ font:  bold 11px
      <string>Al:</string>
     </property>
    </widget>
-   <widget class="QDateEdit" name="dateEdit">
+   <widget class="QDateEdit" name="inizio_datapicker">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -265,7 +265,7 @@ font:  bold 11px
      </rect>
     </property>
    </widget>
-   <widget class="QDateEdit" name="dateEdit_2">
+   <widget class="QDateEdit" name="fine_datapicker">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -292,7 +292,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>333</y>
+      <y>330</y>
       <width>42</width>
       <height>26</height>
      </rect>
@@ -301,13 +301,13 @@ font:  bold 11px
      <number>1</number>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox">
+   <widget class="QComboBox" name="periodicita_combo">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>200</x>
       <y>330</y>
-      <width>161</width>
-      <height>25</height>
+      <width>191</width>
+      <height>21</height>
      </rect>
     </property>
    </widget>
@@ -315,13 +315,13 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>340</y>
-      <width>51</width>
-      <height>17</height>
+      <y>330</y>
+      <width>21</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>a/al</string>
     </property>
    </widget>
   </widget>
