--- a/src/main/gui/modifica_servizio.ui
+++ b/src/main/gui/modifica_servizio.ui
@@ -48,23 +48,10 @@ font:  bold 11px
      <string>ANNULLA</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>340</y>
-      <width>80</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Periodicità:</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="inserisci_button">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>70</x>
       <y>390</y>
       <width>161</width>
       <height>23</height>
@@ -141,9 +128,9 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>155</y>
+      <y>148</y>
       <width>47</width>
-      <height>13</height>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -255,7 +242,7 @@ font:  bold 11px
      <string>Al:</string>
     </property>
    </widget>
-   <widget class="QDateEdit" name="dateEdit">
+   <widget class="QDateEdit" name="inizio_datapicker">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -265,23 +252,13 @@ font:  bold 11px
      </rect>
     </property>
    </widget>
-   <widget class="QDateEdit" name="dateEdit_2">
+   <widget class="QDateEdit" name="fine_datapicker">
     <property name="geometry">
      <rect>
       <x>100</x>
       <y>270</y>
       <width>291</width>
       <height>26</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="periodicita_field">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>330</y>
-      <width>291</width>
-      <height>25</height>
      </rect>
     </property>
    </widget>
@@ -296,6 +273,55 @@ font:  bold 11px
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="periodicita_combo">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>330</y>
+      <width>191</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="ripetizioni_box">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>330</y>
+      <width>42</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>333</y>
+      <width>80</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Periodicità:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>330</y>
+      <width>21</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>a/al</string>
     </property>
    </widget>
   </widget>
