--- a/src/main/gui/inserimento_servizio.ui
+++ b/src/main/gui/inserimento_servizio.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>411</width>
-    <height>440</height>
+    <width>418</width>
+    <height>483</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,7 @@
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>390</y>
+      <y>420</y>
       <width>160</width>
       <height>23</height>
      </rect>
@@ -65,7 +65,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>390</y>
+      <y>420</y>
       <width>161</width>
       <height>23</height>
      </rect>
@@ -264,6 +264,9 @@ font:  bold 11px
       <height>26</height>
      </rect>
     </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QDateEdit" name="fine_datapicker">
     <property name="geometry">
@@ -273,6 +276,9 @@ font:  bold 11px
       <width>291</width>
       <height>26</height>
      </rect>
+    </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="periodicita_error">
@@ -304,24 +310,57 @@ font:  bold 11px
    <widget class="QComboBox" name="periodicita_combo">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>230</x>
       <y>330</y>
-      <width>191</width>
+      <width>161</width>
       <height>21</height>
      </rect>
     </property>
+    <item>
+     <property name="text">
+      <string>al giorno</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>a settimana</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>al mese</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>all'anno</string>
+     </property>
+    </item>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>170</x>
       <y>330</y>
-      <width>21</width>
+      <width>51</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>a/al</string>
+     <string>volte </string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="check_periodicita">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>370</y>
+      <width>141</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Non periodico</string>
     </property>
    </widget>
   </widget>
