--- a/src/main/gui/modifica_servizio.ui
+++ b/src/main/gui/modifica_servizio.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>411</width>
-    <height>442</height>
+    <width>414</width>
+    <height>459</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,7 @@
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>390</y>
+      <y>410</y>
       <width>160</width>
       <height>23</height>
      </rect>
@@ -52,7 +52,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>390</y>
+      <y>410</y>
       <width>161</width>
       <height>23</height>
      </rect>
@@ -275,27 +275,17 @@ font:  bold 11px
      <string/>
     </property>
    </widget>
-   <widget class="QComboBox" name="periodicita_combo">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
-      <y>330</y>
-      <width>191</width>
-      <height>21</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="ripetizioni_box">
+   <widget class="QCheckBox" name="check_periodicita">
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>330</y>
-      <width>42</width>
-      <height>26</height>
+      <y>370</y>
+      <width>141</width>
+      <height>25</height>
      </rect>
     </property>
-    <property name="minimum">
-     <number>1</number>
+    <property name="text">
+     <string>Non periodico</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_8">
@@ -311,17 +301,60 @@ font:  bold 11px
      <string>Periodicità:</string>
     </property>
    </widget>
+   <widget class="QSpinBox" name="ripetizioni_box">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>330</y>
+      <width>42</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="periodicita_combo">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>330</y>
+      <width>161</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>al giorno</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>a settimana</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>al mese</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>all'anno</string>
+     </property>
+    </item>
+   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>170</x>
       <y>330</y>
-      <width>21</width>
+      <width>51</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>a/al</string>
+     <string>volte </string>
     </property>
    </widget>
   </widget>
