--- a/src/main/gui/modifica_servizio.ui
+++ b/src/main/gui/modifica_servizio.ui
@@ -48,7 +48,7 @@ font:  bold 11px
      <string>ANNULLA</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="inserisci_button">
+   <widget class="QPushButton" name="salva_button">
     <property name="geometry">
      <rect>
       <x>70</x>
@@ -75,7 +75,7 @@ font:  bold 11px
 }</string>
     </property>
     <property name="text">
-     <string>INSERISCI</string>
+     <string>SALVA</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_9">
@@ -251,6 +251,9 @@ font:  bold 11px
       <height>26</height>
      </rect>
     </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QDateEdit" name="fine_datapicker">
     <property name="geometry">
@@ -260,6 +263,9 @@ font:  bold 11px
       <width>291</width>
       <height>26</height>
      </rect>
+    </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="periodicita_error">
