--- a/src/main/gui/servizi.ui
+++ b/src/main/gui/servizi.ui
@@ -100,6 +100,12 @@ font:  bold 11px
       <height>421</height>
      </rect>
     </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
+    </property>
+    <property name="horizontalScrollMode">
+     <enum>QAbstractItemView::ScrollPerPixel</enum>
+    </property>
     <attribute name="horizontalHeaderDefaultSectionSize">
      <number>150</number>
     </attribute>
