--- a/src/main/gui/visualizza_servizio.ui
+++ b/src/main/gui/visualizza_servizio.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>380</width>
-    <height>284</height>
+    <width>461</width>
+    <height>299</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Visualizza Servizio</string>
   </property>
   <property name="windowIcon">
    <iconset resource="xz.qrc">
@@ -35,7 +35,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>180</y>
+      <y>190</y>
       <width>80</width>
       <height>16</height>
      </rect>
@@ -63,7 +63,7 @@
       <x>20</x>
       <y>140</y>
       <width>80</width>
-      <height>16</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -86,8 +86,8 @@
    <widget class="QPushButton" name="indietro_button">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>230</y>
+      <x>250</x>
+      <y>240</y>
       <width>160</width>
       <height>23</height>
      </rect>
@@ -118,8 +118,8 @@ font:  bold 11px
      <rect>
       <x>170</x>
       <y>140</y>
-      <width>181</width>
-      <height>16</height>
+      <width>271</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -129,8 +129,8 @@ font:  bold 11px
    <widget class="QPushButton" name="modifica_button">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>230</y>
+      <x>60</x>
+      <y>240</y>
       <width>161</width>
       <height>23</height>
      </rect>
@@ -173,7 +173,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>180</y>
+      <y>190</y>
       <width>191</width>
       <height>16</height>
      </rect>
