--- a/src/main/gui/visualizza_servizio.ui
+++ b/src/main/gui/visualizza_servizio.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>461</width>
-    <height>299</height>
+    <width>446</width>
+    <height>383</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -86,8 +86,8 @@
    <widget class="QPushButton" name="indietro_button">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>240</y>
+      <x>240</x>
+      <y>330</y>
       <width>160</width>
       <height>23</height>
      </rect>
@@ -129,8 +129,8 @@ font:  bold 11px
    <widget class="QPushButton" name="modifica_button">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>240</y>
+      <x>50</x>
+      <y>330</y>
       <width>161</width>
       <height>23</height>
      </rect>
@@ -195,24 +195,63 @@ font:  bold 11px
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="stato_label">
+   <widget class="QLabel" name="cliente_label">
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>220</y>
-      <width>100</width>
-      <height>13</height>
+      <y>100</y>
+      <width>191</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="cliente_label">
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>230</y>
+      <width>80</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Data Inizio:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="data_inizio_label">
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>100</y>
+      <y>230</y>
+      <width>191</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>270</y>
+      <width>80</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Data Fine:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="data_fine_label">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>270</y>
       <width>191</width>
       <height>16</height>
      </rect>
