--- a/src/main/gui/dialog_modifica.ui
+++ b/src/main/gui/dialog_modifica.ui
@@ -10,6 +10,18 @@
     <height>182</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>359</width>
+    <height>182</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>359</width>
+    <height>182</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Attenzione</string>
   </property>
