--- a/src/main/gui/inserimento_cliente.ui
+++ b/src/main/gui/inserimento_cliente.ui
@@ -10,6 +10,18 @@
     <height>491</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>380</width>
+    <height>491</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>380</width>
+    <height>491</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Inserimento Cliente</string>
   </property>
