--- a/src/main/gui/inserimento_mezzo.ui
+++ b/src/main/gui/inserimento_mezzo.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>380</width>
-    <height>274</height>
+    <width>389</width>
+    <height>285</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>389</width>
+    <height>285</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>389</width>
+    <height>285</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Inserimento Mezzo</string>
@@ -22,7 +34,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>220</y>
+      <y>230</y>
       <width>160</width>
       <height>23</height>
      </rect>
@@ -51,7 +63,7 @@ font:  bold 11px
    <widget class="QComboBox" name="patente_combo">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>150</x>
       <y>180</y>
       <width>220</width>
       <height>22</height>
@@ -104,7 +116,7 @@ font:  bold 11px
    <widget class="QDateEdit" name="iscrizione_datepicker">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>150</x>
       <y>140</y>
       <width>220</width>
       <height>22</height>
@@ -118,7 +130,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>220</y>
+      <y>230</y>
       <width>161</width>
       <height>23</height>
      </rect>
@@ -147,7 +159,7 @@ font:  bold 11px
    <widget class="QLineEdit" name="allestimento_field">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>150</x>
       <y>100</y>
       <width>220</width>
       <height>20</height>
@@ -157,7 +169,7 @@ font:  bold 11px
    <widget class="QLineEdit" name="targa_field">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>150</x>
       <y>20</y>
       <width>220</width>
       <height>20</height>
@@ -169,9 +181,21 @@ font:  bold 11px
      <rect>
       <x>20</x>
       <y>65</y>
-      <width>47</width>
-      <height>13</height>
+      <width>71</width>
+      <height>16</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>71</width>
+      <height>16</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>71</width>
+      <height>16</height>
+     </size>
     </property>
     <property name="text">
      <string>Modello:</string>
@@ -182,12 +206,12 @@ font:  bold 11px
      <rect>
       <x>20</x>
       <y>185</y>
-      <width>120</width>
-      <height>13</height>
+      <width>131</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Patente Necessaria</string>
+     <string>Patente Necessaria:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_8">
@@ -219,7 +243,7 @@ font:  bold 11px
    <widget class="QLineEdit" name="modello_field">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>150</x>
       <y>60</y>
       <width>220</width>
       <height>20</height>
