--- a/src/main/gui/inserimento_utente.ui
+++ b/src/main/gui/inserimento_utente.ui
@@ -7,8 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>386</width>
-    <height>295</height>
+    <height>302</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>386</width>
+    <height>302</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>386</width>
+    <height>302</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Inserimento Utente</string>
@@ -79,8 +91,8 @@ font:  bold 11px
      <rect>
       <x>140</x>
       <y>130</y>
-      <width>80</width>
-      <height>13</height>
+      <width>81</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -122,8 +134,8 @@ font:  bold 11px
      <rect>
       <x>20</x>
       <y>35</y>
-      <width>55</width>
-      <height>13</height>
+      <width>91</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -145,8 +157,8 @@ font:  bold 11px
      <rect>
       <x>20</x>
       <y>95</y>
-      <width>55</width>
-      <height>13</height>
+      <width>81</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -228,7 +240,7 @@ font:  bold 11px
      </rect>
     </property>
     <property name="text">
-     <string>Turni</string>
+     <string>Turni:</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="utenti_check">
@@ -254,7 +266,7 @@ font:  bold 11px
      </rect>
     </property>
     <property name="text">
-     <string>Utenti</string>
+     <string>Utenti:</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="mezzi_check">
@@ -293,7 +305,7 @@ font:  bold 11px
      </rect>
     </property>
     <property name="text">
-     <string>Mezzi</string>
+     <string>Mezzi:</string>
     </property>
    </widget>
    <widget class="QLabel" name="username_error">
