--- a/src/main/gui/mezzi.ui
+++ b/src/main/gui/mezzi.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>633</width>
-    <height>528</height>
+    <width>643</width>
+    <height>545</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>643</width>
+    <height>545</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>643</width>
+    <height>545</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Gestione Mezzi</string>
