--- a/src/main/gui/modifica_cliente.ui
+++ b/src/main/gui/modifica_cliente.ui
@@ -10,6 +10,18 @@
     <height>491</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>375</width>
+    <height>491</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>375</width>
+    <height>491</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Modifica Cliente</string>
   </property>
