--- a/src/main/gui/modifica_servizio.ui
+++ b/src/main/gui/modifica_servizio.ui
@@ -10,6 +10,18 @@
     <height>483</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>418</width>
+    <height>483</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>418</width>
+    <height>483</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Inserimento Servizio</string>
   </property>
