--- a/src/main/gui/servizi.ui
+++ b/src/main/gui/servizi.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>866</width>
+    <width>863</width>
     <height>528</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>863</width>
+    <height>528</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>863</width>
+    <height>582</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Gestione Servizi</string>
