--- a/src/main/gui/visualizza_mezzo.ui
+++ b/src/main/gui/visualizza_mezzo.ui
@@ -7,8 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>380</width>
-    <height>353</height>
+    <height>368</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>380</width>
+    <height>368</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>380</width>
+    <height>368</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Visualizza Mezzo</string>
@@ -22,9 +34,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>65</y>
+      <y>58</y>
       <width>47</width>
-      <height>13</height>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -35,7 +47,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>300</y>
+      <y>310</y>
       <width>160</width>
       <height>23</height>
      </rect>
@@ -65,7 +77,7 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>300</y>
+      <y>310</y>
       <width>161</width>
       <height>23</height>
      </rect>
@@ -134,9 +146,9 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>225</y>
+      <y>221</y>
       <width>121</width>
-      <height>16</height>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
