--- a/src/main/gui/visualizza_servizio.ui
+++ b/src/main/gui/visualizza_servizio.ui
@@ -10,6 +10,18 @@
     <height>383</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>446</width>
+    <height>383</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>446</width>
+    <height>383</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Visualizza Servizio</string>
   </property>
